# tech-docs

./: 404.html  Readme.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs.yml
blog/: index.html
blog/azure-landing-zone-naming/: index.html
blog/azure-lz-environments/: index.html
blog/my-dev-setup/: index.html
blog/y-statement/: index.html
decision/adr_platform_landing_zones/: index.html
decision/adr_shared_landing_zones/: index.html
decision/adr_standard_landing_zones/: index.html
docs/: index.md
docs/blog/: azure-landing-zone-naming.md  azure-lz-environments.md  index.md  my-dev-setup.md  y-statement.md
docs/blog/posts/: ADR-blog.md
docs/decision/: adr_platform_landing_zones.md  adr_shared_landing_zones.md  adr_standard_landing_zones.md
docs/tech-notes/: README.md  adr.md  backstage.md  github-actions.md  terraform.md  test-automation-basics.md  typescript.md
docs/tech-notes/Azure/: AKS.md  App Service.md  Basics.md  Container Apps.md  Container Instance.md  Database.md  Docker.md  Linux.md  Networking.md  Notes.md  Vim.md  readme.md
search/: search_index.json
tech-notes/: index.html
tech-notes/Azure/AKS/: index.html
tech-notes/Azure/App Service/: index.html
tech-notes/Azure/Basics/: index.html
tech-notes/Azure/Container Apps/: index.html
tech-notes/adr/: index.html
tech-notes/backstage/: index.html
tech-notes/github-actions/: index.html
tech-notes/python/: index.html
tech-notes/terraform/: index.html
tech-notes/test-automation-basics/: index.html
tech-notes/typescript/: index.html
(+70 files in other folders)
