[tool.poetry]
name = "tech-docs"
version = "0.1.0"
description = ""
authors = ["sunnybharne <sunny.bharne@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs-material = "^9.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
